# xiaohongshu-tool

./: .gitignore  README.md  pyproject.toml  xhs_gui.py  xhs_scraper.py
docs/: FEATURE_ROADMAP.md  MAINTENANCE.md  PROJECT_LAYOUT.md
scripts/: run_gui.bat  run_scraper.bat  run_scraper.ps1  setup.bat  setup.ps1
xhs/: browser.py  cli.py  config.py  csv_store.py  detail.py  extractors.py  logging_utils.py  models.py  modes.py  new_tab.py  parsing.py  preview.py  runner.py  runtime.py  search.py  search_scan.py  strategies.py  urls.py
